fix android demo app name

--- a/app-android/src/main/res/values/strings.xml
+++ b/app-android/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TimeTreeClientSample</string>
+    <string name="app_name">TimeTreeAPIDemo</string>
     <string name="date_format">yyyy/MM/dd</string>
     <string name="time_format">HH:mm</string>
 </resources>
